--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@vueuse/core": "^12.4.0",
     "axios": "^1.7.9",
+    "flv.js": "^1.6.2",
     "naive-ui": "^2.41.0",
     "pinia": "^3.0.0",
     "vue": "^3.5.13",
