--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vueuse/core": "^12.4.0",
     "axios": "^1.7.9",
     "flv.js": "^1.6.2",
+    "hls.js": "^1.5.20",
     "naive-ui": "^2.41.0",
     "pinia": "^3.0.0",
     "vue": "^3.5.13",
